aws/7h/mq/rocketmq-exporter-idn-tr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketmq-exporter-idn-tr
  namespace: test-acp
  labels:
    app: rocketmq-exporter-idn-tr
    component: exporter
spec:
  # 当前为单节点；后续如需多副本，可按需提高 replicas。
  replicas: 1
  selector:
    matchLabels:
      app: rocketmq-exporter-idn-tr
  template:
    metadata:
      labels:
        app: rocketmq-exporter-idn-tr
        component: exporter
    spec:
      containers:
        - name: rocketmq-exporter-idn-tr
          image: apache/rocketmq-exporter:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5557
              name: metrics
          args:
            - "--rocketmq.config.namesrvAddr=rocketmq-nameserver:9876"
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: "0.2"
              memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: rocketmq-exporter-idn-tr
  namespace: test-acp
  labels:
    app: rocketmq-exporter-idn-tr
    component: exporter
spec:
  selector:
    app: rocketmq-exporter-idn-tr
  ports:
    - name: metrics
      port: 5557
      targetPort: 5557
  type: ClusterIP
